public/stylesheets/layout.css
body,div,ul,li,ol,h1,h2,h3,h4,h5,h6,form,fieldset,p{margin:0; padding:0; font-weight:normal}
img,fieldset{border:none; padding:0; margin:0;}
body{font:12px  Arial, Helvetica, sans-serif; color:#666666; background:#eeeeee; background:url(../images/bkg_repeatedxy.jpg) repeat 0 0; }
span.clear{clear:both;}
div.left{float:left; width:auto;}
div.right{float:right; width:auto;}
a:focus{outline:none}
ul{list-style:none;}

div#outer_layout{margin:relative; float:left; width:100%; height:auto;}
div#layout{margin:0 auto; width:945px; height:auto; position:relative;}

div#layout_header{margin:0 auto; width:945px; height:528px; position:relative;}
div#content_header {float:left; width:100%; height:auto; position:relative;}

/*TOOLTIPS*/

div#download_tooltip {position:absolute; bottom:15px; left:-32px; background:url(../images/tooltips/bkg_little_tooltip.png) no-repeat 0 0; width:64px; height:32px; padding:9px 5px 5px 5px; font:bold 9px Arial; color:white; text-transform:uppercase; z-index:100; text-align:center; line-height:9px; display:none;}
div#arcgis_tooltip {position:absolute; bottom:15px; left:-32px; background:url(../images/tooltips/bkg_little_tooltip.png) no-repeat 0 0; width:64px; height:32px; padding:9px 5px 5px 5px; font:bold 9px Arial; color:white; text-transform:uppercase; z-index:100; text-align:center; line-height:9px; display:none;}

div#info_tooltip {position:absolute; bottom:29px; left:-33px; width:160px; height:auto; z-index:500; display:none;}
div#info_tooltip span.head {float:left; background:url(../images/tooltips/bkg_head_info.png) no-repeat 0 0; width:135px; height:14px; padding:10px 10px 0 15px; position:relative; margin:0;}
div#info_tooltip span.head a.close {position:absolute; bottom:10px; right:0; width:33px; height:33px; cursor:pointer; z-index:550; background:url(../images/tooltips/close_tooltip_bttn.png) no-repeat 0 0;}
div#info_tooltip span.head a.close:hover {background-position:0 -33px;}
div#info_tooltip div.content {float:left; position:relative; width:100%; height:auto; }
div#info_tooltip span.content {float:left; background:url(../images/tooltips/bkg_content_info.png) repeat-y; height:auto; width:120px; bottom:0; left:0; padding:5px 25px 5px 15px; margin:-1px 0 0 0;}
div#info_tooltip span.content span.line {float:left; width:123px; background-color:#ECECEC; height:1px; margin:7px 0 0 0;}
div#info_tooltip span.content a.match {float:left; font:normal 11px Arial; color:#E58800;  width:auto; height:auto; margin:0 5px 0 0;}  
div#info_tooltip span.content a.match:hover {color:#C87500;}
div#info_tooltip span.content p.info {font:normal 11px Arial; color:#666666; width:auto; }
div#info_tooltip p.title {float:left; font:normal 10px Arial; color:#BABABA; text-transform:uppercase; width:123px; padding:5px 0 0 0;}
div#info_tooltip span.bottom {float:left; background:url(../images/tooltips/bkg_bottom_info.png) no-repeat 0 0; height:23px; width:100%; margin:-1px 0 0 0;}

/*END - TOOLTIPS*/

div#header {position:left; position:absolute; top:0; left:0; width:930px; padding:7px 0 0 15px; height:90px; background:url(../images/bkg_header.png) no-repeat 0 0; margin:0; z-index:5;}
div#header div.content_left {float:left; width:660px}
div#header div.content_right {float:right;  width:260px}
div#header h1 a {float:left; font:bold 37px Arial; color:white; width:100%; height:auto; margin:0; text-shadow:0px 2px 0px #3D3D3D; text-decoration:none;}
div#header ul.info {float:left; height:90px; width:250px; margin:7px 0 0 50px; padding:0;}
div#header ul.info li {float:left; height:100%;}

div#header ul.info li.datasets {float:left; width:80px; margin:0; }
div#header ul.info li.downloads {float:left; width:100px; margin:0;}

div#header ul.info li span {float:left; margin:15px 8px 0 0;}
div#header ul.info li.datasets span.icon {background:url(../images/dataset_icon.png) no-repeat 0 0; width:22px; height:26px;  }
div#header ul.info li p.amount {float:left; font:normal 48px "Times News Roman"; color:white; width:50px; margin:0; height:49px;}
div#header ul.info li.downloads span.icon {background:url(../images/downloads_icon.png) no-repeat 0 0; width:17px; height:26px;  }

div#header ul.info li p.title {float:left; font:bold 11px Arial; color:white; text-transform:uppercase; width:70px; margin:0 0 5px 0; line-height:11px;}
div#header ul.info li.split {float:left; width:1px; height:45px; background-color:white; margin:18px 20px 0 0px;}

div#header ul.menu {float:left; width:100%; height:26px; margin:22px 0 0 0;	 }
div#header ul.menu li {float:left; width:auto; height:100%; text-transform:uppercase; margin:0 30px 0 0;}
div#header ul.menu li a {text-decoration:none; font:normal 13px Arial; color:white; text-shadow:0px 1px 0px #3D3D3D;}
div#header ul.menu li a:hover {color:#F99F00; text-shadow:0px 1px 0px #3D3D3D; }
div#header ul.menu li.actual a {font-weight:bold;}

div.map {position:absolute; top:0; left:0; width:100%; float:left; margin:0; height:528px; z-index:1; border-bottom:2px solid #7F90A2;}
div#js_map {position:absolute; top:0; left:0; right:0; bottom:0; z-index:1;}

div#zoom_buttons {position:absolute; top:115px; left:0; z-index:5; width:68px; height:27px;}
a#zoomIn {float:left; margin:0 11px 0 0; width:26px; height:26px; background:url(../images/zoom_in_bttn.png) no-repeat 0 0;}
a#zoomIn:hover {background-position:0 -26px; cursor:pointer;}
a#zoomOut {float:left; margin:0; width:26px; height:26px; background:url(../images/zoom_out_bttn.png) no-repeat 0 0;} 
a#zoomOut:hover {background-position:0 -26px; cursor:pointer;}



/* SCROLLABLE LIST */
div#down_databases_info {position:absolute; top:115px; right:0; z-index:5; width:231px;}
a#showing_databases_down {float:left; background:url(../images/showing_db_head.png) no-repeat 0 0; width:216px; height:19px; margin:0; cursor:pointer; position:relative; font:bold 13px Arial; color:white; padding:7px 5px 5px 10px;}
a#showing_databases_down span.tick {position:absolute; right:10px; top:10px; width:10px; height:8px;}
/* ... */

